# yarobot

./: .gitignore  Cargo.toml  README.md  app.py  args.py  dbs.py  main.py  parse_files.py  pyproject.toml  regex_base.py  requirements.txt  rule_generator.py  scoring.py  test.yar  test_web.py  utils.py  vercel.json  yarGen.py  yarobot_rules_bc68af11.yar  yarobot_rules_e930f724.yar
.github/workflows/: CI.yml  publish.yml  python-package.yml  python-publish.yml  release.yml  test.yml
app/: _scoring.py  args.py  config.py  dbs.py  main.py  parse_files.py  regex_base.py  rule_generator.py  scoring.py  utils.py  yarobot_rs.pyi
app/heuristics/: heuristics.py  regex_base.py
crates/stringzz/: Cargo.toml  stringzz.pyi
crates/stringzz/benches/: benchmark.rs
crates/stringzz/src/: config.rs  err.rs  lib.rs  opcodes.rs  strings.rs
crates/stringzz/src/parsing/: mod.rs  opcodes.rs
crates/stringzz/src/processing/: files.rs
crates/stringzz/src/types/: file_info.rs  tokens.rs
crates/stringzz/tests/: tests.rs
python/: Cargo.toml  README.md  pyproject.toml
python/src/: lib.rs
python/src/processing/: files.rs
python/src/scoring/: eval.rs  heuristics.rs
python/tests/: test_integr.rs  test_service.py
python/yarobot/: __init__.py  __main__.py  app.py  common.py  database.py  generate.py  rule_generator.py  service.py
src/: app.py  args.rs  config.rs  database.py  generate.py  lib.rs  main.rs  parse_files.rs  python_bridge.rs  state.rs  utils.rs
src/parsing/: executables.rs  mod.rs  opcodes.rs  strings.rs
src/processing/: files.rs  mod.rs
src/scoring/: eval.rs  heuristics.rs  mod.rs  regex_base.rs
src/types/: mod.rs  tokens.rs
src/yarobot/: app.py  common.py  database.py  generate.py  rule_generator.py
src/yarobot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_integr.rs  test_service.py  test_string_extraction.py  test_yarobot.py
tests/data/: binary  classes.dex
tests/unit/: test_string_extraction.py
tools/: byte-mapper.py
yarobot/: app.py  database.py  rule_generator.py
