[package]
name = "yarobot-rs"
version = "0.1.0"
edition = "2021"



[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
regex = "1.0"
lazy_static = "1.4"  
goblin = "0.9.3"
hex = "0.4.3" 
log = "0.4.28"
walkdir = "2.5.0"
md5 = "0.8.0"
tempfile = "3.23.0"
sha2 = "0.10.9" 
clap = { version = "4.5.49", features = ["derive"] }
anyhow = "1.0.100"
serde_json = "1.0.145"
env_logger = "0.11.8"
flate2 = "1.1.4"
base64 = "0.22.1"
pyo3-ffi = "0.25.0"

[build-dependencies]
pyo3-build-config = "0.25"
