
[workspace]
members = [
    ".",               # Main package in src/
    "crates/stringzz",
    "python",
]
resolver = "2"


[workspace.package]
version = "0.3.5"
edition = "2021"
readme = "README.md"
description = "YARA rules generator"
repository = "https://github.com/ogre2007/yarobot"
authors = ["ogre2007 <oogre@vk.com>"]
homepage = "https://github.com/ogre2007/yarobot"
license = "GPL-3.0-only"


[workspace.dependencies]
stringzz = { path = "crates/stringzz" }
yarobot-rs = { path = "crates/yarobot-rs" }

pyo3 = { version = "0.25", features = ["extension-module"] }
regex = "1.0"
lazy_static = "1.4"
memchr = "2.5"
flate2 = "1.1.3"
pythonize = "0.25.0"
hex = "0.4.3"
tempfile = "3.23.0"
anyhow = "1.0.100"
base64 = "0.22.1"
env_logger = "0.11.8"
log = "0.4.28"


[workspace.build-dependencies]
pyo3-build-config = "0.25"

[workspace.profile.bench]
debug = true

[workspace.profile.release]
lto = true
strup = true
