[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "yarobot"
version = "0.1.1"

authors = [
  { name="ogre2007", email="oogre@vk.com" },
]

requires-python = ">=3.11"
description = "Yara generator inspired by yarGen"
readme = "README.md"
license = "GPLv3.0"

dependencies = [
    "lxml>=4.9.0",
    "orjson>=3.11"
]

test = [
    "pytest",
    "pytest-cov",
    "pytest-datadir>=1.8.0",
    "yara-python"
]

[project.urls]
Homepage = "https://github.com/ogre2007/yarobot"
Issues = "https://github.com/ogre2007/issues"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = [
  "-vv",				       
  "--import-mode=importlib"
]
pythonpath = ["."]