[package]
name = "yarobot-rs"
description = "Core yarobot code ported to rust"

homepage.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[lib]
name = "yarobot_rs"
crate-type = ["cdylib", "lib"]


[dependencies]
stringzz.workspace = true

pyo3.workspace = true
env_logger.workspace = true
anyhow.workspace = true
regex.workspace = true
hex.workspace = true
lazy_static.workspace = true
log.workspace = true
base64.workspace = true 
tempfile.workspace = true
