[package]
name = "stringzz"
description = "A library and tool for strings and opcodes extraction from various file formats"

homepage.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true
keywords = [
    "strings",
    "malware",
    "yara",
    "maturin",
    "yara-generator",
]
license.workspace = true
authors.workspace = true
edition.workspace = true


[dependencies]   
goblin = "0.9.3"
dex = "0.5.0"
sha2 = "0.10.9"
anyhow = "1.0.100"
hex = "0.4.3"
pyo3 = { version = "0.25", features = ["extension-module"] }
regex = "1.0"
md5 = "0.8.0"
log = "0.4.28"

walkdir = "2.5.0"
tempfile.workspace = true

[[bin]]
name = "stringzz" 
